[gd_scene load_steps=28 format=2]

[ext_resource path="res://entities/entity_player/entity_player.gd" type="Script" id=1]
[ext_resource path="res://libs/gt_entity_mover_2d/gt_topdown_entity_mover_2d/gt_topdown_entity_mover_2d.gd" type="Script" id=2]
[ext_resource path="res://components/topdown_controller/topdown_controller.tscn" type="PackedScene" id=3]
[ext_resource path="res://libs/gt_state_machine/gt_state_machine.gd" type="Script" id=4]
[ext_resource path="res://addons/regular_polygon2d_node/RegularPolygon2D.gd" type="Script" id=5]
[ext_resource path="res://libs/gt_state_machine/__gt_state_transition.gd" type="Script" id=6]
[ext_resource path="res://libs/gt_area_2d/gt_trigger_area_2d/gt_hurtbox_2d/gt_hurtbox_2d.gd" type="Script" id=7]
[ext_resource path="res://addons/Trail/trail_2d.gd" type="Script" id=8]
[ext_resource path="res://components/mouse_controller/mouse_controller.tscn" type="PackedScene" id=9]
[ext_resource path="res://libs/gt_health/gt_health.gd" type="Script" id=10]
[ext_resource path="res://entities/entity_player/states/entity_player_base_state.gd" type="Script" id=11]
[ext_resource path="res://components/entity_spawner/entity_spawner.tscn" type="PackedScene" id=12]
[ext_resource path="res://entities/entity_poison_bomb/entity_poison_bomb.tscn" type="PackedScene" id=13]
[ext_resource path="res://libs/gt_input_controller/actions/__gt_input_action.gd" type="Script" id=14]
[ext_resource path="res://libs/gt_points/gt_points.gd" type="Script" id=15]
[ext_resource path="res://components/dashed_line_drawer_2d/dashed_line_drawer_2d.tscn" type="PackedScene" id=16]
[ext_resource path="res://entities/entity_player/scripts/entity_player_range_indicator.gd" type="Script" id=17]
[ext_resource path="res://entities/entity_player/scripts/entity_player_poison_bomb_manager.gd" type="Script" id=18]

[sub_resource type="Curve" id=1]
_data = [ Vector2( 0, 0 ), 0.0, 1.0, 0, 1, Vector2( 1, 1 ), 1.0, 0.0, 1, 0 ]

[sub_resource type="Gradient" id=2]
colors = PoolColorArray( 0.886275, 0.952941, 0.894118, 0, 0.886275, 0.952941, 0.894118, 1 )

[sub_resource type="CircleShape2D" id=3]
radius = 8.0

[sub_resource type="CircleShape2D" id=4]

[sub_resource type="Animation" id=5]
resource_name = "dead_enter"
tracks/0/type = "value"
tracks/0/path = NodePath("Body/visuals/graphics:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Body/visuals/graphics/move_trail:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/2/type = "method"
tracks/2/path = NodePath("Body/Triggers/DamageHurtbox")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "disable_all_shapes"
} ]
}
tracks/3/type = "method"
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ "died" ],
"method": "emit_signal"
} ]
}

[sub_resource type="Animation" id=6]
resource_name = "hurt_enter"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("Body/visuals/graphics:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ true, false, true, false, true, false, true, false, true, false, true, false, true, false, true, false, true, false, true ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("Timers/InvincibilityTimer")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ -1 ],
"method": "start"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Body/visuals/graphics/move_trail:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ true, false, true, false, true, false, true, false, true, false, true, false, true, false, true, false, true, false, true ]
}

[sub_resource type="Animation" id=7]
resource_name = "hurt_exit"
length = 0.1
tracks/0/type = "method"
tracks/0/path = NodePath("Timers/InvincibilityTimer")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "stop"
} ]
}

[sub_resource type="Animation" id=8]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Body/visuals/graphics:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Body/visuals/graphics/move_trail:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=9]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Body/visuals/graphics:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Body/visuals/graphics/move_trail:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[node name="Player" type="Node2D" groups=[
"entity_player",
]]
script = ExtResource( 1 )

[node name="InputController" parent="." instance=ExtResource( 3 )]

[node name="act_fire" type="Node" parent="InputController"]
script = ExtResource( 14 )
action = "act_fire"

[node name="MouseController" parent="." instance=ExtResource( 9 )]

[node name="Health" type="Node" parent="."]
script = ExtResource( 10 )

[node name="Timers" type="Node" parent="."]

[node name="InvincibilityTimer" type="Timer" parent="Timers"]
wait_time = 2.0
one_shot = true

[node name="PoisonBombs" type="Node" parent="."]
script = ExtResource( 18 )
_entity_path = NodePath("..")
_body_path = NodePath("../Body")
_range_indicator_path = NodePath("../Widgets/range_indicator")

[node name="Spawner" parent="PoisonBombs" instance=ExtResource( 12 )]
_actor_path = NodePath("../..")
_entity_template = ExtResource( 13 )
is_independent_entity = true

[node name="Ammo" type="Node" parent="PoisonBombs"]
script = ExtResource( 15 )
initial_points = 2

[node name="Cooldown" type="Timer" parent="PoisonBombs"]
wait_time = 0.6
one_shot = true

[node name="Widgets" type="Node2D" parent="."]
__meta__ = {
"_edit_lock_": true
}

[node name="range_indicator" parent="Widgets" instance=ExtResource( 16 )]
modulate = Color( 1, 1, 1, 0.509804 )
script = ExtResource( 17 )
is_enabled = false
line_color = Color( 0.580392, 0.890196, 0.266667, 1 )
line_dash = 6.0
_entity_path = NodePath("../..")
_body_path = NodePath("../../Body")

[node name="Body" type="KinematicBody2D" parent="."]
collision_layer = 4
collision_mask = 2
__meta__ = {
"_edit_lock_": true
}

[node name="visuals" type="Node2D" parent="Body"]
__meta__ = {
"_edit_lock_": true
}

[node name="effects" type="Node2D" parent="Body/visuals"]
__meta__ = {
"_edit_lock_": true
}

[node name="graphics" type="Node2D" parent="Body/visuals"]
__meta__ = {
"_edit_lock_": true
}

[node name="move_trail" type="Line2D" parent="Body/visuals/graphics"]
width = 24.0
width_curve = SubResource( 1 )
gradient = SubResource( 2 )
script = ExtResource( 8 )
__meta__ = {
"_edit_lock_": true
}
lifetime = 0.08
distance = 2.0
segments = 40

[node name="arrow" type="Polygon2D" parent="Body/visuals/graphics"]
color = Color( 0.886275, 0.952941, 0.894118, 1 )
polygon = PoolVector2Array( 0, -9, 0, 9, 24, 0 )
__meta__ = {
"_edit_lock_": true
}

[node name="main" type="Node2D" parent="Body/visuals/graphics"]
script = ExtResource( 5 )
__meta__ = {
"_edit_lock_": true
}
centered = true
num_sides = 20
size = 20.0
polygon_color = Color( 0.886275, 0.952941, 0.894118, 1 )

[node name="CollisionShape" type="CollisionShape2D" parent="Body"]
visible = false
shape = SubResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="Triggers" type="Node2D" parent="Body"]
__meta__ = {
"_edit_lock_": true
}

[node name="DamageHurtbox" type="Area2D" parent="Body/Triggers" groups=[
"entity_player_damage_hurtbox",
]]
visible = false
collision_layer = 16
collision_mask = 16
script = ExtResource( 7 )
__meta__ = {
"_edit_lock_": true
}
_body_path = NodePath("../..")
collidable_groups = [ "entity_enemy_damage_hitbox" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Body/Triggers/DamageHurtbox"]
shape = SubResource( 4 )
__meta__ = {
"_edit_lock_": true
}

[node name="EntityMover" type="Node" parent="Body"]
script = ExtResource( 2 )
body_path = NodePath("..")
movement_mode = 2
max_move_speed = 160
move_acceleration_time = 0.15

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 4 )
_entity_path = NodePath("..")

[node name="Idle" type="Node" parent="StateMachine"]
script = ExtResource( 11 )
_fsm_path = NodePath("..")
_animation_player_path = NodePath("../../AnimationPlayer")
anim_name_on_enter = "idle_enter"
play_on_enter = true

[node name="ToMove" type="Node" parent="StateMachine/Idle"]
script = ExtResource( 6 )
_end_state_path = NodePath("../../Move")

[node name="ToHurt" type="Node" parent="StateMachine/Idle"]
script = ExtResource( 6 )
_end_state_path = NodePath("../../Hurt")

[node name="ToDead" type="Node" parent="StateMachine/Idle"]
script = ExtResource( 6 )
_end_state_path = NodePath("../../Dead")

[node name="Move" type="Node" parent="StateMachine"]
script = ExtResource( 11 )
_fsm_path = NodePath("..")
_animation_player_path = NodePath("../../AnimationPlayer")
anim_name_on_enter = "move_enter"
play_on_enter = true

[node name="ToIdle" type="Node" parent="StateMachine/Move"]
script = ExtResource( 6 )
_end_state_path = NodePath("../../Idle")

[node name="ToHurt" type="Node" parent="StateMachine/Move"]
script = ExtResource( 6 )
_end_state_path = NodePath("../../Hurt")

[node name="ToDead" type="Node" parent="StateMachine/Move"]
script = ExtResource( 6 )
_end_state_path = NodePath("../../Dead")

[node name="Hurt" type="Node" parent="StateMachine"]
script = ExtResource( 11 )
_fsm_path = NodePath("..")
_animation_player_path = NodePath("../../AnimationPlayer")
anim_name_on_enter = "hurt_enter"
anim_name_on_exit = "hurt_exit"
play_on_enter = true
play_on_exit = true

[node name="ToIdle" type="Node" parent="StateMachine/Hurt"]
script = ExtResource( 6 )
_end_state_path = NodePath("../../Idle")

[node name="Dead" type="Node" parent="StateMachine"]
script = ExtResource( 11 )
_fsm_path = NodePath("..")
_animation_player_path = NodePath("../../AnimationPlayer")
anim_name_on_enter = "dead_enter"
play_on_enter = true
can_move = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "idle_enter"
anims/dead_enter = SubResource( 5 )
anims/hurt_enter = SubResource( 6 )
anims/hurt_exit = SubResource( 7 )
anims/idle_enter = SubResource( 8 )
anims/move_enter = SubResource( 9 )

[connection signal="updated_move_direction" from="InputController" to="StateMachine/Hurt" method="_on_InputController_updated_move_direction"]
[connection signal="updated_move_direction" from="InputController" to="StateMachine/Dead" method="_on_InputController_updated_move_direction"]
[connection signal="updated_move_direction" from="InputController" to="StateMachine/Idle" method="_on_InputController_updated_move_direction"]
[connection signal="updated_move_direction" from="InputController" to="StateMachine/Move" method="_on_InputController_updated_move_direction"]
[connection signal="just_pressed" from="InputController/act_fire" to="StateMachine/Hurt" method="_on_fire_just_pressed"]
[connection signal="just_pressed" from="InputController/act_fire" to="StateMachine/Idle" method="_on_fire_just_pressed"]
[connection signal="just_pressed" from="InputController/act_fire" to="StateMachine/Move" method="_on_fire_just_pressed"]
[connection signal="mouse_position" from="MouseController" to="." method="_on_MouseController_mouse_position"]
[connection signal="died" from="Health" to="StateMachine/Move/ToDead" method="do_transition"]
[connection signal="died" from="Health" to="StateMachine/Idle/ToDead" method="do_transition"]
[connection signal="lived" from="Health" to="StateMachine/Move/ToHurt" method="do_transition"]
[connection signal="lived" from="Health" to="StateMachine/Idle/ToHurt" method="do_transition"]
[connection signal="timeout" from="Timers/InvincibilityTimer" to="StateMachine/Hurt/ToIdle" method="do_transition"]
[connection signal="took_damage" from="Body/Triggers/DamageHurtbox" to="Health" method="lose_health"]
[connection signal="fire_just_pressed" from="StateMachine/Idle" to="PoisonBombs" method="shoot_bomb"]
[connection signal="started_moving" from="StateMachine/Idle" to="StateMachine/Idle/ToMove" method="do_transition"]
[connection signal="fire_just_pressed" from="StateMachine/Move" to="PoisonBombs" method="shoot_bomb"]
[connection signal="stopped_moving" from="StateMachine/Move" to="StateMachine/Move/ToIdle" method="do_transition"]
[connection signal="fire_just_pressed" from="StateMachine/Hurt" to="PoisonBombs" method="shoot_bomb"]
